--- a/package.json
+++ b/package.json
@@ -2,21 +2,15 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "ImageApi.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "masterdpro",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",
     "express": "^4.18.2",
-    "facebook-nologin-scraper": "^0.1.0",
-    "fb-downloader-scrapper": "^1.0.3",
     "fs": "^0.0.1-security",
-    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "scrape-facebook-id": "^1.0.3",
-    "sharp": "^0.33.3"
   }
 }
