--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7",
+    "path": "^0.12.7"
   }
 }
