--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
   }
